@@ -4,13 +4,14 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.threeten.bp.LocalDate;
 
+import java.lang.reflect.InvocationTargetException;
+
 import de.kah2.zodiac.libZodiac4A.Calendar;
 import de.kah2.zodiac.libZodiac4A.DateRange;
 import de.kah2.zodiac.libZodiac4A.Day;
 import de.kah2.zodiac.libZodiac4A.TestConstantsAndHelpers;
 import de.kah2.zodiac.libZodiac4A.interpretation.Gardening;
 import de.kah2.zodiac.libZodiac4A.interpretation.Interpreter;
-
 
 /**
  * This class shows basic usage of this framework.
@@ -29,7 +30,8 @@ public class CalendarExampleSimple {
 	/**
 	 * Runs the example.
 	 */
-	public static void run(Class <? extends Interpreter> interpreterClass, LocalDate startDate, int days) throws IllegalAccessException, InstantiationException {
+	public static void run(Class <? extends Interpreter> interpreterClass, LocalDate startDate, int days)
+			throws NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
 		/* First step: create a Calendar */
 
 		// This is the way to calculate all data for a specific range:
@@ -69,7 +71,7 @@ public class CalendarExampleSimple {
 			builder.appendPlanetaryData(day.getPlanetaryData());
 			builder.appendZodiacData(day.getZodiacData());
 
-			final Interpreter interpreter = interpreterClass.newInstance();
+			final Interpreter interpreter = interpreterClass.getDeclaredConstructor().newInstance();
 			interpreter.setDayAndInterpret(day);
 			builder.appendInterpretation(interpreter);
 
